--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -89,7 +89,9 @@
                                 android:layout_height="wrap_content"
                                 android:inputType="text"
                                 android:completionThreshold="1"
-                                android:text="Indian Rupee (₹)" />
+                                android:text="Indian Rupee (₹)"
+                                android:paddingStart="12dp"
+                                android:paddingEnd="12dp" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -163,7 +165,9 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:inputType="none"
-                                android:text="System Default" />
+                                android:text="System Default"
+                                android:paddingStart="12dp"
+                                android:paddingEnd="12dp" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
